Fix scrollbar overlapping post tags.

--- a/css/search-page.css
+++ b/css/search-page.css
@@ -166,12 +166,12 @@ h6 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: 40px;
+    height: 60px;
     width: 100%;
 }
 
 .post-tag {
-    height: 100%;
+    height: 40px;
     display: inline-block;
     margin-left: 4px;
     margin-right: 4px;
