--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -87,12 +87,12 @@
 
   display: flex;
 
-  height: 40px;
+  height: 60px;
   width: 100%;
 }
 
 .post-tag {
-  height: 100%;
+  height: 40px;
 
   display: inline-block;
 
